--- a/src/css/style.css
+++ b/src/css/style.css
@@ -44,3 +44,167 @@ body {
     font-size: 1.4rem;
     font-family: 'DM Sans', sans-serif;
 }
+
+.library {
+    background-color: #121212;
+    border-radius: .8rem;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    padding: .4rem .8rem;
+    color: #b3b3b3;
+    font-weight: 600;
+    font-size: 1.4rem;
+    margin-top: 1rem;
+}
+
+.library .library_content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.library .library_content .library_button {
+    display: flex;
+    align-items: center;
+    margin-right: 1rem;
+    color: #b3b3b3;
+    background: transparent;
+    border: none;
+    font-size: 1.4rem;
+    font-weight: 700;
+    font-family: 'DM Sans', sans-serif;
+    text-align: center;
+    text-decoration: none;
+    text-transform: none;
+    padding: 2rem 1rem;
+}
+
+.library .library_content .library_button .faa {
+    font-size: 2rem;
+    margin-right: 1rem;
+    font-weight: 300;
+    padding-right: .8rem;
+}
+
+.library .library_content .fa-plus {
+    margin: 2.4rem 1rem;
+}
+
+.section_playlist {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: 2rem;
+    background-color: #242424;
+    color: #b3b3b3;
+    font-weight: 600;
+    font-size: 1.4rem;
+    margin: .8rem 0;
+    padding: 1.6rem 2rem;
+    border-radius: 1rem;
+}
+
+.section_playlist .section_playlist_content {
+    display: flex;
+    flex-direction: column;
+}
+
+.section_playlist_content .text {
+    padding-bottom: 1.4rem;
+    color: #fff;
+    font-family: 'DM Sans', sans-serif;
+}
+
+.section_playlist_content .title {
+    font-weight: 700;
+}
+
+.section_playlist_content .subtitle {
+    font-weight: 500;
+    font-size: 1.2rem;
+}
+
+.section_playlist_content .section_playlist_button {
+    display: flex;
+    justify-content: center;
+    background-color: #fff;
+    color: #000;
+    border-radius: 2rem;
+    font-size: 1.2rem;
+    font-weight: 700;
+    font-family: 'DM Sans', sans-serif;
+    text-decoration: none;
+    text-transform: none;
+    padding: 1rem;
+    margin-top: 1.2rem;
+    border: 0;
+    width: 11.3rem;
+    cursor: pointer;
+}
+
+.sidebar .cookies {
+    margin: 2.5rem 2rem;
+}
+
+.sidebar .cookies a {
+    color: #b3b3b3;
+    font-weight: 500;
+    font-size: 1rem;
+    text-decoration: none;
+}
+
+.sidebar .cookies a:hover {
+    text-decoration: underline;
+}
+
+.languages .languages_button {
+    align-items: center;
+    gap: 1rem;
+    background-color: transparent;
+    border: 1px solid #878787;
+    color: #fff;
+    font-weight: bold;
+    cursor: pointer;
+    width: 17rem;
+    margin: .8rem;
+    padding: .8rem;
+    border-radius: 2rem;
+}
+
+.footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 1.5rem 4rem;
+    background: linear-gradient(90deg, rgba(188,21,159,1) 0%, rgba(75,155,255,1) 100%);
+}
+
+.footer .propaganda{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    color: #fff;
+    font-family: 'DM Sans', sans-serif;
+    font-size: 1.2rem;
+}
+
+.footer .propaganda .subtitle{
+    font-weight: 600;
+}
+
+.footer .inscrever {
+    background-color: #fff;
+    color: #000;
+    font-size: 1.2rem;
+    font-weight: 700;
+    font-family: 'DM Sans', sans-serif;
+    padding: 1rem 2rem;
+    border: none;
+    border-radius: 2rem;
+    cursor: pointer;
+}
